<resources>
    <string name="app_name" translatable="false">My Notes App</string>
    <string name="logo" translatable="false">My Notes</string>

    <string name="open">Open</string>
    <string name="edit">Edit</string>
    <string name="edit_note">Edit note</string>
    <string name="edited">Text has been edited</string>
    <string name="copy">Copy text</string>
    <string name="copied">Text has been copied</string>
    <string name="delete">Delete</string>
    <string name="alert_dialog_delete">Are you shure you want to delete?</string>
    <string name="deleted">Note deleted</string>
    <string name="close">Close</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign-Up</string>
    <string name="log_in">Log-In</string>
    <string name="log_out">Logout</string>
    <string name="alert_dialog_logout">Are you sure you want to log out?</string>
    <string name="you_have_an_account">You have an account?</string>
    <string name="return_to">Return to </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--    Menu-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="search_input">Find</string>
    <string name="nothing_found">Nothing found</string>
    <string name="profile">Profile</string>

    <!--    Notes-->
    <string name="add_new">Add new</string>
    <string name="add">Add</string>
    <string name="add_note">Add note</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="saved">Saved</string>
    <string name="empty_note">Can not save empty note!</string>

    <!--SignUp & LogIn -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>

    <!--Onboarding -->
    <string name="write">Write</string>
    <string name="compose">Compose</string>
    <string name="memorize">Memorize</string>
    <string name="create">Create</string>

    <!--Validate-->
    <string name="email_cant_be_empty">Email must not be empty</string>
    <string name="email_incorrect">Incorrect Email</string>
    <string name="password_cant_be_empty">Password must not be empty</string>
    <string name="password_incorrect">Incorrect password</string>
    <string name="name_3_to_255_field">The field must contain from 3 to 255 characters</string>
    <string name="name_empty_field">The field must not be empty</string>


</resources>