<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <TextView
        android:id="@+id/back_textView"
        style="@style/TextRegularStyle.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:drawablePadding="@dimen/margin_4dp"
        android:text="@string/back"
        app:drawableStartCompat="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_note_textView"
        style="@style/TextHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_64dp"
        android:text="@string/add_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_textView" />


    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:background="@color/purple_light"
        android:gravity="top"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingTop="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/add_note_textView"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/text_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/message_height"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:background="@color/purple_light"
        android:gravity="top"
        android:hint="@string/text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingTop="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@id/title_edit_text"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/add_button"
        style="@style/TextButtonStyle"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_76dp"
        android:text="@string/add"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>