<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_16dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_note_textView"
            style="@style/TextHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_64dp"
            android:text="@string/edit_note"/>

        <EditText
            android:id="@+id/title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@color/purple_light"
            android:gravity="top"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/margin_16dp"
            android:paddingTop="@dimen/margin_16dp" />

        <EditText
            android:id="@+id/text_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/message_height"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:background="@color/purple_light"
            android:gravity="top"
            android:hint="@string/text"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="@dimen/margin_16dp"
            android:paddingTop="@dimen/margin_16dp" />

    </LinearLayout>

</LinearLayout>